typescript/checker/tests/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessor1.ts.stderr
error: GetterPropWithoutReturn {
    span: Span {
        lo: BytePos(
            34,
        ),
        hi: BytePos(
            37,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessor1.ts:3:7
  |
3 |   get foo() { }
  |       ^^^

